add gulp bable and sourcemaps

--- a/package.json
+++ b/package.json
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/hasmany/TODO/issues"
   },
-  "homepage": "https://github.com/hasmany/TODO#readme"
+  "homepage": "https://github.com/hasmany/TODO#readme",
+  "devDependencies" : {
+    "gulp" : "^3.9.1",
+    "gulp-connect" : "^5.0,0",
+    "glup-sass": "^3.1.0",
+    "gulp-conat" : "^2.6.1",
+    "jasmine": "^2.8.0",
+    "gulp-babel" : "^7.0.0",
+    "gulp-sourcemaps" : "^2.6.1",
+    "babel-preset-env" : "^1.6.1"
+   } 
 }
