--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jasmine": "^2.8.0",
     "gulp-babel" : "^7.0.0",
     "gulp-sourcemaps" : "^2.6.1",
-    "babel-preset-env" : "^1.6.1"
+    "babel-preset-env" : "^1.6.1",
+    "babel-core" : "^6.26.0"
    } 
 }
