--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "gulp-babel" : "^7.0.0",
     "gulp-sourcemaps" : "^2.6.1",
     "babel-preset-env" : "^1.6.1",
-    "babel-core" : "^6.26.0"
+    "babel-core" : "^6.26.0",
+    "browserify" : "^14.5.0",
+    "vinyl-source-stream" : "^1.1.0"
    } 
 }
