--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "url": "https://github.com/hasmany/TODO/issues"
   },
   "homepage": "https://github.com/hasmany/TODO#readme",
-  "devDependencies" : {
-    "gulp" : "^3.9.1",
-    "gulp-connect" : "^5.0.0",
+  "scripts": {
+      "gulp" :"gulp"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-connect": "^5.0.0",
     "gulp-sass": "^3.1.0",
-    "gulp-concat" : "^2.6.1",
+    "gulp-concat": "^2.6.1",
     "jasmine": "^2.8.0",
-    "gulp-babel" : "^7.0.0",
-    "gulp-sourcemaps" : "^2.6.1",
-    "babel-preset-env" : "^1.6.1",
-    "babel-core" : "^6.26.0",
-    "browserify" : "^14.5.0",
-    "vinyl-source-stream" : "^1.1.0"
-   } 
+    "gulp-babel": "^7.0.0",
+    "gulp-sourcemaps": "^2.6.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-core": "^6.26.0",
+    "browserify": "^14.5.0",
+    "vinyl-source-stream": "^1.1.0"
+  }
 }
