--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babelify": "8.0.0",
     "browserify": "^14.5.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
@@ -26,8 +27,8 @@
     "gulp-connect": "^5.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
+    "gulp-strip-code": "^0.1.4",
     "jasmine": "^2.8.0",
-    "vinyl-source-stream": "^1.1.0",
-    "babelify": "8.0.0"
+    "vinyl-source-stream": "^1.1.0"
   }
 }
